# Pilot-AI-Consultant

./: .dockerignore  .gitignore  ARCHITECTURE_AUDIT_REPORT.md  CONTEXT_MANAGER_ARCHITECTURE.md  CONTEXT_SYSTEM_FULL_REPORT.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  HIDDEN_CONTEXT_SYSTEM_REPORT.md  MULTIPLE_CONFIG_GUIDE.md  POSTGRESQL_MIGRATION_REPORT.md  PROMPT_ANALYSIS_REPORT.md  REFACTORING_STEP1_REPORT.md  SCHEDULE_SYSTEM_REPORT.md  STUB_MODE_GUIDE.md  TOOLS_FORMAT_GUIDE.md  WEBHOOK_SETUP_GUIDE.md  YDB_COMMANDS_LIST.md  YDB_FALLBACK_GUIDE.md  YDB_LOGGING_SUPPRESSION_GUIDE.md  alembic.ini  boot.sh  check_database.py  check_time_format.py  deploy_debug.sh  dialogue_patterns.json  dialogue_patterns.json.bak  docker-compose.yml  env.example  gemini_connection_guide.md  key.json  launch.py  push_to_registry.sh  pyproject.toml  requirements.txt  run_local_cloud.py  run_polling.py  run_server.py  switch_mode.ps1  switch_mode.sh  test_db_connection.py  (+12 more)
alembic/: env.py
app/: main.py  main_original.py.bak  main_stub.py
beauty_salon_ai/: .env.example  .gitignore  pyproject.toml
docs/: ASYNC_ARCHITECTURE_AUDIT.md  README.md  YDB_CHANGES_GUIDE.md  YDB_DATABASE_GUIDE.md  appointments_flow.md  dialogue_tracing_system.md  robust_date_parser_guide.md
editor/: README.md  app.py  run_editor.py  test_api.py  test_editor.py
knowledge_base/: policy_greeting.txt  policy_many_slots.txt  policy_no_slots.txt
scripts/: README_analyze_dialogues.md  README_seed_appointments.md  TEST_RESULTS.md  analyze_dialogues.py  analyze_sqlite.py  check_manicure_masters.py  check_raw_data.py  (+44 more)
(+75 files in other folders)
