[tool.poetry]
name = "beauty_salon_ai"
version = "0.1.0"
description = "AI-ассистент для салона красоты"
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
httpx = "^0.25.0"
requests = "^2.31.0"
google-generativeai = "^0.8.0"
google-auth = "^2.23.0"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
boto3 = "^1.40.0"

[tool.poetry.group.dev.dependencies]
faker = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

